fix(styles): don't hide overflowing task information

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,6 @@
 .ott .lines {
     flex-shrink: 1;
     flex-grow: 1;
-    overflow: hidden;
 }
 .ott .stripe {
     display: flex;
